--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -25,15 +25,17 @@ classifiers = [
 
 dependencies = [
     "fastapi>=0.104.0",
-    "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "python-multipart>=0.0.6",
     "aiofiles>=23.2.1",
     "httpx>=0.25.0",
     "openai>=1.3.0",
+    "google-generativeai>=0.3.0",
     "python-dotenv>=1.0.0",
     "loguru>=0.7.2",
+    "uvicorn[standard]>=0.35.0",
+    "click>=8.2.1",
 ]
 
 [project.optional-dependencies]
